--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@semantic-release/git": "^10.0.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20.5.6",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
