--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "ts-node-dev -r tsconfig-paths/register ./src/api/server.ts",
+    "start:dev": "ts-node-dev -r tsconfig-paths/register ./src/server.ts",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -18,7 +18,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "http-status-codes": "^2.2.0",
     "mongodb": "^5.8.1"
   },
   "devDependencies": {
@@ -41,7 +40,6 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.0",
-    "nodemon": "^3.0.1",
     "semantic-release": "^21.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
